Name:                keera-network-sms-diamondcard
Version:             0.1
Synopsis:            Send SMS's using DiamondCard
Description:         Send SMS's using the DiamondCard VoIP provider. Messages are sent unencrypted, using HTTPS POST messages.
Homepage:            http://keera.co.uk/blog/community
License:             BSD3
License-file:        LICENSE
Author:              Ivan Perez
Maintainer:          ivan.perez@keera.co.uk
Stability:           Provisional
Category:            Network
Build-type:          Simple
cabal-version: >= 1.10

Library
  default-language: Haskell2010

  Build-depends:       base >=4, curl
  hs-source-dirs:      src/
  -- Build-tools:
  ghc-options: -Wall

  exposed-modules: Network.SMS.DiamondCard

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual: True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual: True

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  hs-source-dirs: tests
  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage
  type: exitcode-stdio-1.0
  main-is: HaddockCoverage.hs
  ghc-options: -Wall
  hs-source-dirs: tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
      base >= 4 && < 5,
      directory,
      filepath,
      process,
      regex-posix
