-- Copyright   : (C) Ivan Perez Dominguez, 2011
-- License     : BSD3
-- Maintainer  : support@keera.co.uk
cabal-version:       >= 1.2
build-type:          Simple

name:                keera-network-sms-diamondcard
version:             0.1
author:              Ivan Perez
maintainer:          support@keeera.co.uk
homepage:            http://keera.es/blog/community
license:             BSD3
license-file:        LICENSE
category:            Network
synopsis:            Send SMS's using DiamondCard
description:
  Send SMS's using the DiamondCard VoIP provider. Messages are sent
  unencrypted, using HTTPS POST messages.
stability:           Provisional


library

  exposed-modules:
    Network.SMS.DiamondCard

  build-depends:
      base >= 4
    , curl

  hs-source-dirs:
    src/

  -- build-tools:
  ghc-options:
    -Wall
